# C-Test

./: CMakeLists.txt
source/: TESTGlobalMethods.cpp  main.cpp
source/headers/: GlobalFunctions.h
